--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <compiler-plugin.version>3.8.1</compiler-plugin.version>
     <maven.compiler.target>11</maven.compiler.target>
     <sonar.sources>pom.xml,src/test/java,src/test/resources/features</sonar.sources>
-    <sonar.java.binaries>target/classes</sonar.java.binaries>
+    <sonar.java.binaries>target/quarkus-backend-1.0.0-SNAPSHOT/WEB-INF/classes</sonar.java.binaries>
   </properties>
   <dependencyManagement>
     <dependencies>
